removed min height for pads which fixed safari ios overflow issue

--- a/src/index.css
+++ b/src/index.css
@@ -63,7 +63,6 @@ code {
 #padgrid{
   display:grid;
   height:100%;
-  min-height: 225px;
   grid-template-columns: 33% 34% 33%;
   grid-template-rows: 33% 34% 33%;
   grid-area: pads;
